<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_active"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:textColor="#f00"
            android:text="@string/res_hook_unavailable"/>

        <Switch
            android:id="@+id/switch_time_watermark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchPadding="10dp"
            android:text="@string/time_watermark"/>

        <EditText
            android:id="@+id/et_custom_watermark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_custom_text"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="doSave"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="25dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_goto_cm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera_watermark"
                android:padding="25dp"
                android:onClick="openActivity"/>
            <Button
                android:id="@+id/btn_goto_fn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flash_notice"
                android:padding="25dp"
                android:onClick="openActivity"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>